--- a/src/components/Easter/Easter.module.css
+++ b/src/components/Easter/Easter.module.css
@@ -13,9 +13,9 @@
 
 .products {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
   width: 100%;
+  flex-wrap: wrap;
 }
