--- a/src/components/Easter/EasterProduct.module.css
+++ b/src/components/Easter/EasterProduct.module.css
@@ -6,20 +6,19 @@
   background-color: rgb(218,185,191,0.6);
   border: 2px solid var(--lightBrown);
   border-radius: 10px;
-  width: 300px;
+  width: 100%;
   height: 100%;
   padding: 0px 10px 10px 10px;
 }
 
 .image {
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     border: 2px solid var(--lightBrown);
     border-radius: 10px;
 }
 
 .name {
-    /* color: var(--lightPink); */
     color: white;
     font-size: 1.2rem;
     text-shadow: 1px 1px 5px black;
