--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -1,72 +1,81 @@
-.col-xl-1 {width: 8.33%;}
-.col-xl-2 {width: 16.66%;}
-.col-xl-3 {width: 25%;}
-.col-xl-4 {width: 33.33%;}
-.col-xl-5 {width: 41.66%;}
-.col-xl-6 {width: 50%;}
-.col-xl-7 {width: 58.33%;}
-.col-xl-8 {width: 66.66%;}
-.col-xl-9 {width: 75%;}
-.col-xl-10 {width: 83.33%;}
-.col-xl-11 {width: 91.66%;}
-.col-xl-12 {width: 100%;}
+.rowGrid {
+  --gutter: 20px;
+  --lg-device: 1199.98px;
+  --md-device: 991.98px;
+  --sm-device: 767.98px;
+  --xs-device: 575.98px;
+}
+
+.col-xl-1 {width: calc(8.33% - var(--gutter));}
+.col-xl-2 {width: calc(16.66% - var(--gutter));}
+.col-xl-3 {width: calc(25% - var(--gutter));}
+.col-xl-4 {width: calc(33.33% - var(--gutter));}
+.col-xl-5 {width: calc(41.66% - var(--gutter));}
+.col-xl-6 {width: calc(50% - var(--gutter));}
+.col-xl-7 {width: calc(58.33% - var(--gutter));}
+.col-xl-8 {width: calc(66.66% - var(--gutter));}
+.col-xl-9 {width: calc(75% - var(--gutter));}
+.col-xl-10 {width: calc(83.33% - var(--gutter));}
+.col-xl-11 {width: calc(91.66% - var(--gutter));}
+.col-xl-12 {width: calc(100% - var(--gutter));}
 
 @media (max-width: 1199.98px) {
-  .col-lg-1 {width: 8.33%;}
-  .col-lg-2 {width: 16.66%;}
-  .col-lg-3 {width: 25%;}
-  .col-lg-4 {width: 33.33%;}
-  .col-lg-5 {width: 41.66%;}
-  .col-lg-6 {width: 50%;}
-  .col-lg-7 {width: 58.33%;}
-  .col-lg-8 {width: 66.66%;}
-  .col-lg-9 {width: 75%;}
-  .col-lg-10 {width: 83.33%;}
-  .col-lg-11 {width: 91.66%;}
-  .col-lg-12 {width: 100%;}
+  .col-lg-1 {width: calc(8.33% - var(--gutter));}
+  .col-lg-2 {width: calc(16.66% - var(--gutter));}
+  .col-lg-3 {width: calc(25% - var(--gutter));}
+  .col-lg-4 {width: calc(33.33% - var(--gutter));}
+  .col-lg-5 {width: calc(41.66% - var(--gutter));}
+  .col-lg-6 {width: calc(50% - var(--gutter));}
+  .col-lg-7 {width: calc(58.33% - var(--gutter));}
+  .col-lg-8 {width: calc(66.66% - var(--gutter));}
+  .col-lg-9 {width: calc(75% - var(--gutter));}
+  .col-lg-10 {width: calc(83.33% - var(--gutter));}
+  .col-lg-11 {width: calc(91.66% - var(--gutter));}
+  .col-lg-12 {width: calc(100% - var(--gutter));}
 }
 
 @media (max-width: 991.98px) {
-  .col-md-1 {width: 8.33%;}
-  .col-md-2 {width: 16.66%;}
-  .col-md-3 {width: 25%;}
-  .col-md-4 {width: 33.33%;}
-  .col-md-5 {width: 41.66%;}
-  .col-md-6 {width: 50%;}
-  .col-md-7 {width: 58.33%;}
-  .col-md-8 {width: 66.66%;}
-  .col-md-9 {width: 75%;}
-  .col-md-10 {width: 83.33%;}
-  .col-md-11 {width: 91.66%;}
-  .col-md-12 {width: 100%;}
+  .col-md-1 {width: calc(8.33% - var(--gutter));}
+  .col-md-2 {width: calc(16.66% - var(--gutter));}
+  .col-md-3 {width: calc(25% - var(--gutter));}
+  .col-md-4 {width: calc(33.33% - var(--gutter));}
+  .col-md-5 {width: calc(41.66% - var(--gutter));}
+  .col-md-6 {width: calc(50% - var(--gutter));}
+  .col-md-7 {width: calc(58.33% - var(--gutter));}
+  .col-md-8 {width: calc(66.66% - var(--gutter));}
+  .col-md-9 {width: calc(75% - var(--gutter));}
+  .col-md-10 {width: calc(83.33% - var(--gutter));}
+  .col-md-11 {width: calc(91.66% - var(--gutter));}
+  .col-md-12 {width: calc(100% - var(--gutter));}
 }
 
+
 @media (max-width: 767.98px) {
-  .col-sm-1 {width: 8.33%;}
-  .col-sm-2 {width: 16.66%;}
-  .col-sm-3 {width: 25%;}
-  .col-sm-4 {width: 33.33%;}
-  .col-sm-5 {width: 41.66%;}
-  .col-sm-6 {width: 50%;}
-  .col-sm-7 {width: 58.33%;}
-  .col-sm-8 {width: 66.66%;}
-  .col-sm-9 {width: 75%;}
-  .col-sm-10 {width: 83.33%;}
-  .col-sm-11 {width: 91.66%;}
-  .col-sm-12 {width: 100%;}
+  .col-sm-1 {width: calc(8.33% - var(--gutter));}
+  .col-sm-2 {width: calc(16.66% - var(--gutter));}
+  .col-sm-3 {width: calc(25% - var(--gutter));}
+  .col-sm-4 {width: calc(33.33% - var(--gutter));}
+  .col-sm-5 {width: calc(41.66% - var(--gutter));}
+  .col-sm-6 {width: calc(50% - var(--gutter));}
+  .col-sm-7 {width: calc(58.33% - var(--gutter));}
+  .col-sm-8 {width: calc(66.66% - var(--gutter));}
+  .col-sm-9 {width: calc(75% - var(--gutter));}
+  .col-sm-10 {width: calc(83.33% - var(--gutter));}
+  .col-sm-11 {width: calc(91.66% - var(--gutter));}
+  .col-sm-12 {width: calc(100% - var(--gutter));}
 }
 
 @media (max-width: 575.98px) {
-  .col-xs-1 {width: 8.33%;}
-  .col-xs-2 {width: 16.66%;}
-  .col-xs-3 {width: 25%;}
-  .col-xs-4 {width: 33.33%;}
-  .col-xs-5 {width: 41.66%;}
-  .col-xs-6 {width: 50%;}
-  .col-xs-7 {width: 58.33%;}
-  .col-xs-8 {width: 66.66%;}
-  .col-xs-9 {width: 75%;}
-  .col-xs-10 {width: 83.33%;}
-  .col-xs-11 {width: 91.66%;}
-  .col-xs-12 {width: 100%;}  
+  .col-xs-1 {width: calc(8.33% - var(--gutter));}
+  .col-xs-2 {width: calc(16.66% - var(--gutter));}
+  .col-xs-3 {width: calc(25% - var(--gutter));}
+  .col-xs-4 {width: calc(33.33% - var(--gutter));}
+  .col-xs-5 {width: calc(41.66% - var(--gutter));}
+  .col-xs-6 {width: calc(50% - var(--gutter));}
+  .col-xs-7 {width: calc(58.33% - var(--gutter));}
+  .col-xs-8 {width: calc(66.66% - var(--gutter));}
+  .col-xs-9 {width: calc(75% - var(--gutter));}
+  .col-xs-10 {width: calc(83.33% - var(--gutter));}
+  .col-xs-11 {width: calc(91.66% - var(--gutter));}
+  .col-xs-12 {width: calc(100% - var(--gutter));}
 }
