--- a/src/index.css
+++ b/src/index.css
@@ -142,3 +142,13 @@ h2 {
   left: 10px !important;
   z-index: 10;
 }
+
+.react-datepicker-wrapper {
+  border: 1px solid var(--mediumPink) !important;
+  font-size: 1rem !important;
+  padding: 2px 5px !important;
+  border-radius: 5px !important;
+  background: var(--lightPink) !important;
+  transition: 0.2s;
+  width: 200px !important;
+}
