--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -11,7 +11,7 @@
   padding: 0 10px;
 }
 
-.container > p:last-child {
+.container > div:last-child {
   margin-bottom: 20px;
 }
 
@@ -25,9 +25,35 @@
   margin-bottom: 10px;
 }
 
+.order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
+  height: 100%;
   gap: 25px;
-  margin-bottom: 10px;
+}
+
+.payment {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 25px;
+}
+
+.notes {  
+  max-width: 900px;
+}
+
+@media (max-width: 42rem) {
+  .order {
+    flex-direction: column;
+  }
 }
